<resources>
    <string name="app_name">EpiCalc</string>

    <string name="action_settings">Settings</string>
    <string name="action_help">Help</string>
    <string name="action_request">Request Feature</string>
    <string name="action_show">Show Work</string>

    <string name="calculate">Calculate</string>
    <string name="answer_prompt">Answer:</string>
    <string name="equation_prompt">Equation:</string>
    <string name="remainder_prompt">Remainder:</string>

    <string name="main_algebra">Algebra</string>
        <string name="aos">Axis of Symmetry</string>
            <string name="aos_a">\'A\' part of the Quadratic</string>
            <string name="aos_b">\'B\' part of the Quadratic</string>
            <string name="aos_c">\'C\' part of the Quadratic</string>
        <string name="polynomials">Polynomial Factoring</string>
            <string name="poly_coeffs">Space-Separated Coefficients</string>
            <string name="poly_input_prompt">Input the coefficients of the polynomial from highest to lowest degree, making sure to include the constant. Leave spaces between coefficients. Right now, coefficients may only consist of integers.</string>
        <string name="quadratic">Quadratic Equation</string>


    <string name="main_geometry">Geometry</string>
        <string name="distance">Distance Formula</string>
        <string name="midpoint">Midpoint Formula</string>
        <string name="pythagorean">Pythagorean Theorem</string>

    <string name="main_precal">Pre-Calculus/Trigonometry</string>
        <string name="angle_between_lines">Angle Between Two Lines</string>
        <string name="right_tri_trig">Right Triangle Trigonometry</string>
        <string name="law_sines">Law of Sines</string>
        <string name="law_cosines">Law of Cosines</string>
        <string name="vectors">Vectors</string>

    <string name="main_stats">Statistics</string>
        <string name="fractional_error">Fractional Error</string>
        <string name="percent_error">Percent Error</string>
        <string name="percent_diff">Percent Difference</string>
</resources>
