<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/scrollView2"
        android:layout_gravity="center_horizontal" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
            <Button
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:text="@string/angle_between_lines"
                android:id="@+id/ABL_Button" />
            <Button
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:text="@string/law_cosines"
                android:id="@+id/LawCosines_Button" />
            <Button
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:text="@string/law_sines"
                android:id="@+id/LawSines_Button" />
            <Button
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:text="@string/right_tri_trig"
                android:id="@+id/RTT_Button" />
            <Button
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:text="@string/vectors"
                android:id="@+id/Vector_Button" />

        </LinearLayout>

    </ScrollView>

</LinearLayout>