<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity"
    android:orientation="vertical">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/scrollView" >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <Button
                android:id="@+id/Algebra_Button"
                android:layout_height="50dp"
                android:layout_width="match_parent"
                android:text="@string/main_algebra"
                />
            <Button
                android:id="@+id/Geometry_Button"
                android:layout_height="50dp"
                android:layout_width="match_parent"
                android:text="@string/main_geometry"
                />
            <Button
                android:id="@+id/PreCal_Button"
                android:layout_height="50dp"
                android:layout_width="match_parent"
                android:text="@string/main_precal"
                />
            <Button
                android:id="@+id/Stats_Button"
                android:layout_height="50dp"
                android:layout_width="match_parent"
                android:text="@string/main_stats"
                />
        </LinearLayout>
    </ScrollView>
</LinearLayout>
