<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/scrollView2"
        android:layout_gravity="center_horizontal" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
            <Button
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:text="@string/fractional_error"
                android:id="@+id/FractionalErr_Button" />
            <Button
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:text="@string/percent_diff"
                android:id="@+id/PercentDiff_Button" />
            <Button
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:text="@string/percent_error"
                android:id="@+id/PercentErr_Button" />

        </LinearLayout>

    </ScrollView>

</LinearLayout>